1.2.0
Added: An API.
Fixed: Difficulty meter not rendering when InGame Info XML is installed (#24)

1.1.3
Marked compatible with 1.12.1

1.1.2
Added: Configs that can be used to reset players' health and/or difficulty at regular intervals. You can set the resets to occur daily, weekly (specifying the weekday of your choice), or monthly.
Added: es_VE.lang (couresy of Dorzar)

1.1.1
Added: Heart containers now heal (configurable, defaults to 4 (2 hearts), set to 0 to disable)
Added: Config to disable max health increases from heart containers, allowing them to be used exclusively as healing items.
Added: Pet regen. Tamed animals will slowly recover health over time. Set the config to 0 to disable.
Fixed: The config for notifying players when blights die not being loaded (it wasn't even in the file).

1.1.0
Updated for Silent Lib 2.2.5 (adds MC 1.10.2 and 1.11.2 compatibility)

1.0.11
Silent Lib 2.2.4 (Forge 2387)

1.0.10
Updated for Silent Lib 2.2.3 and Forge 2373
Fixed: Blights not dropping hearts when killed by pets.

1.0.9
Changed: Heart container texture, courtesy of spawnus_

1.0.8
Forge 2340
Removed: A debug line I accidentally left in.
Fixed: Heart crystal ore not being in any creative tab.

1.0.7
Added: A config to control how many heart crystal shards drop from each ore. Note that fortune can double the base amount.
Changed: Many difficulty configs can now be set to negative values, allowing far greater control over the difficulty system!
Behind the scenes: Updated the config class to the Silent Lib "AdaptiveConfig". Currently this is not being used for anything, but your config file will now track the last build you used.

1.0.6
Added: Config to lose difficulty on death. Set to a negative number if you want to GAIN difficulty on death. Defaults to 0.
Added: Separate config for hearts dropped by passive mobs (defaults to 0.1%, hostile rate is 1%).